Change to CLDR locale provider