@@ -65,11 +65,6 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-/**
- * Due to changes in JDK9 where locale data is used from CLDR, the licence message will differ in jdk 8 and jdk9+
- * https://openjdk.java.net/jeps/252
- * We run ES with -Djava.locale.providers=SPI,COMPAT and same option has to be applied when running this test from IDE
- */
 public class ClusterStateLicenseServiceTests extends ESTestCase {
 
     // must use member mock for generic
@@ -101,9 +96,9 @@ public class ClusterStateLicenseServiceTests extends ESTestCase {
         );
         final String message = service.buildExpirationMessage(time, expired).toString();
         if (expired) {
-            assertThat(message, startsWith("LICENSE [EXPIRED] ON [THURSDAY, NOVEMBER 15, 2018].\n"));
+            assertThat(message, startsWith("LICENSE [EXPIRED] ON [THU, NOV 15, 2018].\n"));
         } else {
-            assertThat(message, startsWith("License [will expire] on [Thursday, November 15, 2018].\n"));
+            assertThat(message, startsWith("License [will expire] on [Thu, Nov 15, 2018].\n"));
         }
     }
 
